--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,4 +20,4 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py') --disable=unnecessary-ellipsis,too-many-lines,too-many-instance-attributes,too-many-arguments,too-few-public-methods
+        pylint $(git ls-files '*.py') --disable=unnecessary-ellipsis,superfluous-parens,too-many-lines,too-many-instance-attributes,too-many-arguments,too-few-public-methods,too-many-locals,too-many-nested-blocks,too-many-branches,too-many-statements
