--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,6 +21,7 @@ permissions:
 jobs:
   linux:
     runs-on: ubuntu-latest
+    environment: publish
     strategy:
       matrix:
         target: [x86_64, x86, aarch64, armv7, s390x, ppc64le]
@@ -44,6 +45,7 @@ jobs:
 
   windows:
     runs-on: windows-latest
+    environment: publish
     strategy:
       matrix:
         target: [x64, x86]
@@ -67,6 +69,7 @@ jobs:
 
   macos:
     runs-on: macos-latest
+    environment: publish
     strategy:
       matrix:
         target: [x86_64, aarch64]
@@ -89,6 +92,7 @@ jobs:
 
   sdist:
     runs-on: ubuntu-latest
+    environment: publish
     steps:
       - uses: actions/checkout@v3
       - name: Build sdist
@@ -105,6 +109,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    environment: publish
     if: "startsWith(github.ref, 'refs/tags/')"
     needs: [linux, windows, macos, sdist]
     steps:
