--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ authors = [
 maintainers = [
     {name = "Ollie Kampo", email = "olliekampo@gmail.com"}
 ]
-keywords = ["jinx", "algorithms", "data structures", "ai", "ml", "robotics"]
+keywords = ["aloy", "algorithms", "data structures", "ai", "ml", "robotics"]
 license = { file = "LICENSE" }
 requires-python = ">=3.7"
 classifiers = [
