--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "aloy"
-version = "0.1.1"
+version = "0.2.0"
 description = "A Python package containing algorithms and data structures for AI, ML, and Robotics."
 readme = "README.md"
 authors = [
@@ -15,7 +15,7 @@ maintainers = [
 ]
 keywords = ["aloy", "algorithms", "data structures", "ai", "ml", "robotics"]
 license = { file = "LICENSE" }
-requires-python = ">=3.7"
+requires-python = ">=3.11"
 classifiers = [
     "Development Status :: 1 - Planning",
     "Intended Audience :: Developers",
@@ -36,14 +36,24 @@ classifiers = [
     "Typing :: Typed"
 ]
 dependencies = [
-    "numpy>=1.21.2",
-    # "pandas>=1.3.3",
-    # "scipy>=1.7.1",
-    # "scikit-learn>=1.0",
-    # "matplotlib>=3.4.3",
-    # "seaborn>=0.11.2",
-    # "torch>=1.9.1",
-    # "gym>=0.19.0"
+    "numpy==1.24.3",
+    "pyside6==6.5.2",
+    "pyside6-addons==6.5.2",
+    "pyside6-essentials==6.5.2",
+    "scikit-learn==1.2.2",
+    "scipy==1.10.1",
+    "networkx==3.1",
+    "matplotlib==3.7.1",
+    "networkx==3.1",
+    "numba==0.57.0",
+    "pandas==1.5.3",
+    "psutil==5.9.0",
+    "pyfiglet==0.8.post1",
+    "scikit_learn==1.2.2",
+    "tqdm==4.65.0",
+    "typing_extensions==4.8.0",
+    "torch==2.1.0",
+    "gymnasium==0.28.1"
 ]
 
 
