--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ dependencies = [
     "scikit_learn==1.2.2",
     "tqdm==4.65.0",
     "typing_extensions==4.8.0",
-    "torch==2.1.0",
+    # "torch==2.1.0",
     "gymnasium==0.28.1"
 ]
 
